src/core-crm/objects/Case/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <description>Used to track the progress within the status</description>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>International Admissions</fullName>
            </value>
            <value>
                <fullName>International Office</fullName>
            </value>
            <value>
                <fullName>Faculty</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Other QUT Department</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>