src/core-crm/objects/Case/fields/Supplied_QUT_Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Supplied_QUT_Student_ID__c</fullName>
    <description>Student Identifier</description>
    <externalId>true</externalId>
    <inlineHelpText>Student Identifier</inlineHelpText>
    <label>Supplied QUT Student ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>