src/core-crm/objects/Case/fields/Support_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Support_Discussed__c</fullName>
    <description>The support that was discussed with the student</description>
    <label>Support Discussed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative - Canvas/eStudent/Email</fullName>
            </value>
            <value>
                <fullName>Administrative - HiQ/AskQUT</fullName>
            </value>
            <value>
                <fullName>Administrative - Faculty</fullName>
            </value>
            <value>
                <fullName>Administrative - Units/Study Plan</fullName>
            </value>
            <value>
                <fullName>Administrative - Assignment Extension/WWAP</fullName>
            </value>
            <value>
                <fullName>Administrative - Leave of Absence</fullName>
            </value>
            <value>
                <fullName>Administrative - QTAC</fullName>
            </value>
            <value>
                <fullName>Administrative - Other</fullName>
            </value>
            <value>
                <fullName>Belonging - Orientation</fullName>
            </value>
            <value>
                <fullName>Belonging - Oodgeroo</fullName>
            </value>
            <value>
                <fullName>Belonging - Clubs/Societies</fullName>
            </value>
            <value>
                <fullName>Belonging - Peer Programs</fullName>
            </value>
            <value>
                <fullName>Belonging - Chaplaincy/Multi-faith prayer rooms</fullName>
            </value>
            <value>
                <fullName>Belonging - Other</fullName>
            </value>
            <value>
                <fullName>Life - Welfare</fullName>
            </value>
            <value>
                <fullName>Life - Counselling</fullName>
            </value>
            <value>
                <fullName>Life - Equity</fullName>
            </value>
            <value>
                <fullName>Life - Disability &amp; Accessibility</fullName>
            </value>
            <value>
                <fullName>Life - QUT Medical Centre</fullName>
            </value>
            <value>
                <fullName>Life - QUT Guild</fullName>
            </value>
            <value>
                <fullName>Life - Parenting Support</fullName>
            </value>
            <value>
                <fullName>Life - Other</fullName>
            </value>
            <value>
                <fullName>Time &amp; Workload Management - Coaching</fullName>
            </value>
            <value>
                <fullName>Time &amp; Workload Management - Other</fullName>
            </value>
            <value>
                <fullName>Academic - Library</fullName>
            </value>
            <value>
                <fullName>Academic - Language &amp; Learning</fullName>
            </value>
            <value>
                <fullName>Academic - Peer Programs</fullName>
            </value>
            <value>
                <fullName>Academic - STEM</fullName>
            </value>
            <value>
                <fullName>Academic - Other</fullName>
            </value>
            <value>
                <fullName>Careers - General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>