src/core-crm/objects/Case/fields/Support_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Support_Referrals__c</fullName>
    <description>The support services the student was referred to</description>
    <label>Support Referrals</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Belonging - Oodgeroo</fullName>
            </value>
            <value>
                <fullName>Life - Welfare</fullName>
            </value>
            <value>
                <fullName>Life - Counselling</fullName>
            </value>
            <value>
                <fullName>Life - Equity</fullName>
            </value>
            <value>
                <fullName>Life - Disability &amp; Accessibility</fullName>
            </value>
            <value>
                <fullName>Time &amp; Workload Management - Coaching</fullName>
            </value>
            <value>
                <fullName>Academic - Library</fullName>
            </value>
            <value>
                <fullName>Academic - Language &amp; Learning</fullName>
            </value>
            <value>
                <fullName>Academic - Peer Programs</fullName>
            </value>
            <value>
                <fullName>Academic - STEM</fullName>
            </value>
            <value>
                <fullName>Careers</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>