src/core-crm/objects/Case/fields/Web_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Web_First_Name__c</fullName>
    <formula>LEFT(  SuppliedName ,LEN( SuppliedName  )-LEN( Web_Last_Name__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web First Name</label>
    <type>Text</type>
</CustomField>