src/core-crm/objects/Case/fields/Web_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Web_Last_Name__c</fullName>
    <formula>SUBSTITUTE(RIGHT(SUBSTITUTE( SuppliedName ,&quot; &quot;,&quot;--------------------------------------------------------------------------------&quot;),80),&quot;-&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web Last Name</label>
    <type>Text</type>
</CustomField>