src/core-crm/objects/Case/fields/Web_Mobile_Locale__c.field-meta.xml
<CustomField>
    <fullName>Web_Mobile_Locale__c</fullName>
    <description>Appointment setters mobile locale</description>
    <label>Web Mobile Locale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loqate_Locale</valueSetName>
    </valueSet>
</CustomField>