src/core-crm/objects/Case/recordTypes/Domestic_FS_Enquiry.recordType-meta.xml
<RecordType>
    <fullName>Domestic_FS_Enquiry</fullName>
    <active>true</active>
    <businessProcess>FS Enquiry</businessProcess>
    <label>Domestic FS Enquiry</label>
</RecordType>