src/core-crm/objects/Case/recordTypes/Domestic_Future_Student_Enquiry.recordType-meta.xml
<RecordType>
    <fullName>Domestic_Future_Student_Enquiry</fullName>
    <active>true</active>
    <businessProcess>FS Enquiry</businessProcess>
    <label>Domestic Future Student Enquiry</label>
</RecordType>