src/core-crm/objects/Case/recordTypes/Inbound_Enquiry.recordType-meta.xml
<RecordType>
    <fullName>Inbound_Enquiry</fullName>
    <active>true</active>
    <businessProcess>Inbound Enquiry</businessProcess>
    <label>Inbound Enquiry</label>
</RecordType>