src/core-crm/objects/Case/recordTypes/International_Enquiry.recordType-meta.xml
<RecordType>
    <fullName>International_Enquiry</fullName>
    <active>true</active>
    <businessProcess>International Enquiry</businessProcess>
    <description>International Enquiry is used for the International Student Recruitment Team</description>
    <label>International Enquiry</label>
</RecordType>