src/core-crm/objects/Case/recordTypes/International_FS_Enquiry.recordType-meta.xml
<RecordType>
    <fullName>International_FS_Enquiry</fullName>
    <active>true</active>
    <businessProcess>FS Enquiry</businessProcess>
    <label>International FS Enquiry</label>
</RecordType>