src/core-crm/objects/Case/recordTypes/International_Future_Student_Enquiry.recordType-meta.xml
<RecordType>
    <fullName>International_Future_Student_Enquiry</fullName>
    <active>true</active>
    <businessProcess>FS Enquiry</businessProcess>
    <label>International Future Student Enquiry</label>
</RecordType>