src/core-crm/objects/Case/recordTypes/Outreach.recordType-meta.xml
<RecordType>
    <fullName>Outreach</fullName>
    <active>true</active>
    <businessProcess>Student Success Outreach Case</businessProcess>
    <label>Outreach</label>
</RecordType>