src/core-crm/objects/Case/validationRules/Awaiting_Response_From_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Awaiting_Response_From_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( OR( 
ISPICKVAL(Status, &quot;Awaiting Response&quot;)&amp;&amp; 
ISBLANK( Text( Awaiting_Response_From__c ) )
))</errorConditionFormula>
    <errorDisplayField>Awaiting_Response_From__c</errorDisplayField>
    <errorMessage>Awaiting Response From is required.</errorMessage>
</ValidationRule>