src/core-crm/objects/Case/validationRules/Closed_Status_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Status_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
 RecordType.DeveloperName = &apos;International_Future_Student_Enquiry&apos;,
 ISCHANGED( Status ),
 ISPICKVAL( PRIORVALUE( Status ) , &apos;Closed&apos;) 
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Update of status is not allowed when case is already closed</errorMessage>
</ValidationRule>