src/core-crm/objects/Case/validationRules/Closure_Details_min_length.validationRule-meta.xml
<ValidationRule>
    <fullName>Closure_Details_min_length</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
 RecordType.DeveloperName = &apos;International_Future_Student_Enquiry&apos;,
 AND(
  ISPICKVAL( Status , &apos;Closed&apos;),
  OR(
   ISPICKVAL( Closure_Code__c, &apos;Response Given&apos;),
   ISPICKVAL( Closure_Code__c, &apos;Redirected&apos;)
  )
 ), 
 LEN ( Closure_Details__c ) &lt;= 20
)</errorConditionFormula>
    <errorDisplayField>Closure_Details__c</errorDisplayField>
    <errorMessage>Must be more than 20 characters</errorMessage>
</ValidationRule>