src/core-crm/objects/Case/validationRules/Contact_or_Lead_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_or_Lead_Validation</fullName>
    <active>true</active>
    <description>Lead and Contact cannot be linked to the case at the same time.</description>
    <errorConditionFormula>AND (
!ISBLANK( ContactId ),
!ISBLANK( Lead__c )
)</errorConditionFormula>
    <errorMessage>Lead and Contact cannot be linked to the case at the same time.</errorMessage>
</ValidationRule>