src/core-crm/objects/Case/validationRules/Lead_or_Contact_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_or_Contact_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
 OR(
     RecordType.DeveloperName = &apos;International_Future_Student_Enquiry&apos;,
     RecordType.DeveloperName = &apos;Domestic_Future_Student_Enquiry&apos;
 ),
 ISCHANGED( Status ),
 NOT ( ISPICKVAL( PRIORVALUE( Status ) , &apos;Closed&apos;) ),
 OR(
  ISPICKVAL( Status , &apos;Assigned&apos;),
  ISPICKVAL( Status , &apos;Awaiting Response&apos;),
  ISPICKVAL( Status , &apos;Escalated&apos;),
  ISPICKVAL( Status , &apos;Pending Closure&apos;),
  AND(
   ISPICKVAL( Status , &apos;Closed&apos;),
   OR(
    ISPICKVAL( Closure_Code__c, &apos;Response Given&apos;),
    ISPICKVAL( Closure_Code__c, &apos;Redirected&apos;)
   )
  )
 ),
 AND(
  ISBLANK( ContactId ),
  ISBLANK( Lead__c )
 ) 
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>A Lead or Contact must be assigned to update the Status</errorMessage>
</ValidationRule>