src/core-crm/objects/Case/validationRules/Outreach_Next_Action_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Outreach_Next_Action_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
	RecordType.DeveloperName = &apos;Outreach&apos;,
	ISPICKVAL(Status,&apos;Callback&apos;),
	(Next_Action_Date_Time__c &lt;= NOW())
)</errorConditionFormula>
    <errorDisplayField>Next_Action_Date_Time__c</errorDisplayField>
    <errorMessage>Select a future date/time.</errorMessage>
</ValidationRule>