src/core-crm/objects/Case/validationRules/Outreach_Support_Discussed_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Outreach_Support_Discussed_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
	RecordType.DeveloperName = &apos;Outreach&apos;,
	ISBLANK(Support_Discussed__c),
	OR(
		ISPICKVAL(Closure_Code__c,&apos;Successful - Phone&apos;),
		ISPICKVAL(Closure_Code__c,&apos;Successful - Email&apos;),
		ISPICKVAL(Closure_Code__c,&apos;Successful - Message&apos;)
	)
)</errorConditionFormula>
    <errorDisplayField>Support_Discussed__c</errorDisplayField>
    <errorMessage>Support Discussed is required when Closure Code is &apos;Successful&apos;.</errorMessage>
</ValidationRule>