src/core-crm/objects/Case/validationRules/Priority_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Priority_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
 RecordType.DeveloperName = &apos;International_Enquiry&apos;,
 ISCHANGED( Status ),
 NOT ( ISPICKVAL( PRIORVALUE( Status ) , &apos;Closed&apos;) ),
 OR(
  ISPICKVAL( Status , &apos;Assigned&apos;),
  ISPICKVAL( Status , &apos;Awaiting Response&apos;),
  ISPICKVAL( Status , &apos;Escalated&apos;),
  AND(
   ISPICKVAL( Status , &apos;Closed&apos;),
   OR(
    ISPICKVAL( Closure_Code__c, &apos;Response Given&apos;),
    ISPICKVAL( Closure_Code__c, &apos;Redirected&apos;)
   )
  )
 ),
 ISBLANK( TEXT( Priority ) )
)</errorConditionFormula>
    <errorDisplayField>Priority</errorDisplayField>
    <errorMessage>Priority is required to update Status</errorMessage>
</ValidationRule>