src/core-crm/objects/Case/listViews/Callbacks.listView-meta.xml
<ListView>
    <fullName>Callbacks</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Next_Action_Date_Time__c</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case_Type__c</field>
        <operation>equals</operation>
        <value>Student Success - Retention</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Callback</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Outreach</value>
    </filters>
    <label>Callbacks</label>
    <sharedTo>
        <group>Development_Team</group>
        <group>System_Administrator</group>
        <group>System_Administrator_Modify_All_Data</group>
        <group>System_Administrator_Read_Only</group>
        <role>Student_Success_Outreach_Manager</role>
        <role>Student_Success_Outreach_Staff</role>
    </sharedTo>
</ListView>