src/core-crm/objects/Case/listViews/Domestic_Email_Enquiries.listView-meta.xml
<ListView>
    <fullName>Domestic_Email_Enquiries</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Domestic_FS_Enquiry</value>
    </filters>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Email</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Domestic Email Enquiries</label>
    <sharedTo>
        <group>Future_Students_Domestic</group>
    </sharedTo>
</ListView>