src/core-crm/objects/Case/listViews/Domestic_Manually_Created_Enquiries.listView-meta.xml
<ListView>
    <fullName>Domestic_Manually_Created_Enquiries</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Domestic_Future_Student_Enquiry</value>
    </filters>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Phone,SMS</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Domestic Manually Created Enquiries</label>
    <sharedTo>
        <group>Future_Students_Domestic</group>
    </sharedTo>
</ListView>