src/core-crm/objects/Case/listViews/Future_Student_Advisor_Assigned.listView-meta.xml
<ListView>
    <fullName>Future_Student_Advisor_Assigned</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Student_LifeCycle_Status__c</columns>
    <columns>Category__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Pending Closure</value>
    </filters>
    <filters>
        <field>Latest_Queue_Name__c</field>
        <operation>equals</operation>
        <value>Future Student Advisor Enquiries</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notEqual</operation>
        <value>Future Student Advisor Enquiries</value>
    </filters>
    <label>Future Student Advisor - Assigned</label>
    <sharedTo>
        <group>International_Recruitment</group>
        <role>International_Super_User</role>
    </sharedTo>
</ListView>