src/core-crm/objects/Case/listViews/Future_Student_Advisor_Unassigned.listView-meta.xml
<ListView>
    <fullName>Future_Student_Advisor_Unassigned</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Student_LifeCycle_Status__c</columns>
    <columns>hed__Category__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Pending Closure</value>
    </filters>
    <label>Future Student Advisor - Unassigned</label>
    <queue>Future_Student_Advisor_Enquiries</queue>
    <sharedTo>
        <group>International_Recruitment</group>
    </sharedTo>
</ListView>